<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/NoActionBar"
    tools:context=".ui.details.DetailsActivity">

    <include
        android:id="@+id/toolbar_custom"
        layout="@layout/toolbar" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.Scrolling.AppBarOverlay">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:layout_marginTop="?attr/actionBarSize"
            android:background="@color/grey"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
            app:toolbarId="@+id/toolbar_custom">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title_details"
                    style="@style/tv_style_fifjalla_one"
                    android:text="@string/title"
                    android:textSize="@dimen/text_size_24sp" />

                <TextView
                    android:id="@+id/tv_desc_details"
                    style="@style/tv_style_noto_sans"
                    android:text="@string/description"
                    android:textSize="@dimen/text_size_20sp" />

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>


    <include layout="@layout/content_scrolling" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:backgroundTint="@color/red"
        android:contentDescription="@string/todo"
        android:tint="@color/white"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_play_button" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>